--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,7 +2,7 @@
     display: flex;
     margin-top: 25px;
     width: 500px;
-    height: 180px;
+    min-height: 180px;
     background-color: rgb(231, 231, 231);
     border-radius: 10px;
 }
