--- a/src/app/demo-form-with-validations/demo-form-with-validations.component.html
+++ b/src/app/demo-form-with-validations/demo-form-with-validations.component.html
@@ -4,13 +4,19 @@
         (ngSubmit)="onSubmit(myForm.value)"
         class="form"
         [class.error]="!myForm.valid && myForm.touched">
-        <div class="field">
+        <div class="field" [class.error]="!sku.valid && sku.touched">
             <label for="skuInput">SKU</label>
             <input type="text"
                 id="skuInput"
                 placeholder="SKU"
                 [formControl]="sku">
+            <div *ngIf="!sku.valid"
+                class="error-message">SKU is invalid</div>
+            <div *ngIf="sku.hasError('required')"
+                class="error-message">SKU is required</div>
         </div>
+        <div *ngIf="!myForm.valid"
+            class="error-message">Form is invalid</div>
         <button type="submit" class="button">Submit</button>
     </form>
 </div>
